<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bgLoginScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:fillViewport="true"
    android:background="@color/white"
    android:padding="20dp">

    <LinearLayout
        android:id="@+id/bgLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"


        android:orientation="vertical"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_marginTop="200dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/image_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/login"
                android:textColor="@color/black"

                android:textSize="50sp"
                app:fontFamily="@font/baloo_bhai"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="65dp"
                android:layout_height="53dp"
                android:layout_alignParentTop="true"

                android:layout_alignParentEnd="true"
                android:layout_marginEnd="6dp"
                android:background="@drawable/buslogo"
                app:tint="#9C0000"
                app:srcCompat="@drawable/ic_baseline_directions_bus_24" />
        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userNameLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/userName"
            android:textColorHint="#494949"
            app:boxStrokeColor="@color/black"
            app:boxStrokeErrorColor="@color/blue"
            app:boxStrokeWidth="2dp"
            app:boxStrokeWidthFocused="1dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:startIconDrawable="@drawable/ic_baseline_person_outline_24"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo_semibold"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="#494949"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="2dp"
            app:boxStrokeWidthFocused="1dp"
            app:endIconMode="password_toggle"
            app:endIconCheckable="true"
            app:endIconTint="@color/black"
            app:startIconDrawable="@drawable/password"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo_semibold"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:id="@+id/checkBoxRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/rememberCheckBox"
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:buttonTint="@color/black"
                android:text="@string/rememberme"
                android:textColor="@color/black"

                android:textSize="10sp" />

            <Button
                android:id="@+id/forgotPasswordButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@color/white"
                android:onClick="forgotPassword"
                android:paddingStart="12dp"
                android:text="@string/forgot"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="10sp" />




        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <Button
                android:id="@+id/loginButton"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="33dp"
                android:layout_toStartOf="@+id/signupButton"
                android:background="@drawable/curved_button"
                android:onClick="login"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white" />


            <Button
                android:id="@+id/signupButton"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="20dp"
                android:background="@color/white"
                android:onClick="signup"
                android:text="@string/orSignup"
                android:textAllCaps="false"
                android:textColor="@color/black" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>