<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bgSignupConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity"
    >

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_height="match_parent"
        android:id="@+id/bgCoordinatorLayout"
        android:layout_width="match_parent"
        android:background="@drawable/coordinatorlayout"
        >

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:theme="@style/Theme.MyApplication">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="@color/black"
                app:title="@string/joinus"
                android:theme="@style/Theme.MyApplication"
                app:expandedTitleTextColor="@color/blue"

                app:collapsedTitleTextColor="@color/red"
                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
                android:background="@drawable/highway">


                <ImageView
                    android:id="@+id/busImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="20dp"
                    android:scaleType="fitEnd"
                    android:src="@drawable/autobus" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolBar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin" />
            </com.google.android.material.appbar.CollapsingToolbarLayout>



        </com.google.android.material.appbar.AppBarLayout>


        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollViewCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/roundedge"
            android:padding="12dp"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            tools:context=".SignupActivity">

            <LinearLayout
                android:id="@+id/bgLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:orientation="vertical"
                android:padding="12dp">


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/firstname"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeErrorColor="@color/blue"
                    app:boxStrokeWidth="2dp"
                    app:boxStrokeWidthFocused="1dp"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/black"
                    app:startIconDrawable="@drawable/ic_baseline_person_outline_24"
                    app:startIconTint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fnameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/cairo_semibold"
                        android:inputType="text"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/lastname"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeErrorColor="@color/blue"
                    app:boxStrokeWidth="2dp"
                    app:boxStrokeWidthFocused="1dp"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/black"
                    app:startIconDrawable="@drawable/ic_baseline_person_outline_24"
                    app:startIconTint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lnameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/cairo_semibold"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/password"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeErrorColor="@color/blue"
                    app:boxStrokeWidth="2dp"
                    app:boxStrokeWidthFocused="1dp"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/black"
                    app:startIconDrawable="@drawable/password"
                    app:startIconTint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/cairo_semibold"
                        android:inputType="textPassword"
                        android:textColorHint="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/confirmpassword"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeErrorColor="@color/blue"
                    app:boxStrokeWidth="2dp"
                    app:boxStrokeWidthFocused="1dp"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/black"
                    app:startIconDrawable="@drawable/password"
                    app:startIconTint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/confirmPasswordEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/cairo_semibold"
                        android:inputType="textPassword"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>


                <CheckBox
                    android:id="@+id/termsCheckBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"

                    android:buttonTint="@color/black"
                    android:buttonTintMode="src_in"
                    android:checked="false"
                    android:fontFamily="@font/cairo_semibold"
                    android:text="@string/terms"
                    android:textColor="@color/black"

                    android:textSize="10sp" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/signupButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="80dp"
                        android:layout_marginTop="40dp"
                        android:background="@drawable/button"
                        android:onClick="signup"
                        android:text="@string/signup"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/backToLoginButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="40dp"
                        android:layout_marginBottom="20dp"
                        android:layout_toRightOf="@+id/signupButton"
                        android:background="@color/white"
                        android:onClick="backToLogin"
                        android:src="@color/white"
                        android:text="@string/backToLogin"
                        android:textAllCaps="false"
                        android:textColor="@color/black" />

                </RelativeLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

